# api/docs/swagger.json
@@ -78,7 +78,7 @@
                     "200": {
                         "description": "Animal data",
                         "schema": {
-                            "$ref": "#/definitions/models.Animal"
+                            "$ref": "#/definitions/models.AnimalGet"
                         }
                     },
                     "400": {
@@ -146,6 +146,49 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "description": "Delete an animal by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Animal"
+                ],
+                "summary": "Delete Animal",
+                "operationId": "delete_animal",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Animal ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Animal Deleted",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
             }
         },
         "/animals": {
@@ -187,6 +230,42 @@
                         "description": "Animals data",
                         "schema": {
                             "$ref": "#/definitions/models.AnimalsGetAll"
+                        }
+                    },
+                    "500": {
+                        "description": "Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/dashboard/get-animals-count": {
+            "get": {
+                "description": "Retrieve the total count of animals in the system",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Dashboard"
+                ],
+                "summary": "Get the count of animals",
+                "operationId": "getAnimalCount",
+                "responses": {
+                    "200": {
+                        "description": "Animals count",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
                         }
                     },
                     "500": {
@@ -419,47 +498,6 @@
         }
     },
     "definitions": {
-        "models.Animal": {
-            "type": "object",
-            "properties": {
-                "animalType": {
-                    "type": "string"
-                },
-                "avgConsumption": {
-                    "type": "number"
-                },
-                "avgWater": {
-                    "type": "number"
-                },
-                "birth": {
-                    "type": "string"
-                },
-                "createdAt": {
-                    "type": "string"
-                },
-                "deletedAt": {
-                    "type": "integer"
-                },
-                "feeding": {
-                    "$ref": "#/definitions/models.FeedingSchedule"
-                },
-                "healthCondition": {
-                    "$ref": "#/definitions/models.HealthCondition"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "type": {
-                    "type": "string"
-                },
-                "updatedAt": {
-                    "type": "string"
-                },
-                "weight": {
-                    "type": "integer"
-                }
-            }
-        },
         "models.AnimalCreate": {
             "type": "object",
             "properties": {
@@ -566,26 +604,6 @@
                 }
             }
         },
-        "models.FeedingSchedule": {
-            "type": "object",
-            "properties": {
-                "animalType": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "lastFedIndex": {
-                    "type": "integer"
-                },
-                "nextFedIndex": {
-                    "type": "integer"
-                },
-                "scheduleID": {
-                    "type": "integer"
-                }
-            }
-        },
         "models.GetAllProvisions": {
             "type": "object",
             "properties": {
@@ -610,26 +628,6 @@
                     "type": "number"
                 },
                 "type": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.HealthCondition": {
-            "type": "object",
-            "properties": {
-                "animalID": {
-                    "type": "integer"
-                },
-                "condition": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "isHealthy": {
-                    "type": "boolean"
-                },
-                "medication": {
                     "type": "string"
                 }
             }
