# api/handlers/init.go
@@ -2,14 +2,16 @@ package handlers
 
 import (
 	"farmish/config/logger"
+	"farmish/dashboard"
 	service "farmish/services"
 )
 
 type HTTPHandler struct {
-	Service *service.Service
-	Logger  logger.Logger
+	Service   *service.Service
+	Dashboard *dashboard.Dashboard
+	Logger    logger.Logger
 }
 
-func NewHTTPHandler(service *service.Service, logger logger.Logger) *HTTPHandler {
-	return &HTTPHandler{Service: service, Logger: logger}
+func NewHTTPHandler(service *service.Service, dashboard *dashboard.Dashboard, logger logger.Logger) *HTTPHandler {
+	return &HTTPHandler{Service: service, Dashboard: dashboard, Logger: logger}
 }
